--- a/components/e2e-tests-go-kqaaypnd-import-imported/overlays/development/deployment-patch.yaml
+++ b/components/e2e-tests-go-kqaaypnd-import-imported/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: e2e-tests-go-kqaaypnd-import-imported
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/rhtap_qe/e2e-tests-go-kqaaypnd-import-imported:685f3054bf2affb8df1c6c313dff369d65a77e6d@sha256:4346b01b198523705b2e87c95992460ca28585c969460dad5a9aff69535bd65c
+          name: container-image
